# InversionesPWA-NOSQL

./: .gitignore  FEATURE_NEWS_INTEGRATION.md  README.md  package-lock.json  package.json
.drfic/diana-sdk/specs/: 001-plan-drfic.md
.github/: copilot-instructions.md
backend/: package.json
backend/src/middleware/: authContext.ts
backend/src/routes/audit/: operationDetail.ts
backend/src/routes/execution/: execute.ts
diana-sdk-installer/: CHANGELOG.md  README.md  pyproject.toml
diana-sdk-installer/assets/drfic/diana-sdk/sdk/diana/scripts/: README.md
projects/pwa/inversions_app/: package.json
projects/pwa/inversions_app/src/: index.css  main.tsx
projects/rest-api/inversions_api/: .env.example  package.json  test-env-agent.js  test-gemini-key.js  tsconfig.json
projects/rest-api/inversions_api/requests/: news.http
projects/rest-api/rest_api_inversions_drfic/: package.json
scripts/: validate-structure.ps1
specs/001-plataforma-inversiones-ia/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-plataforma-inversiones-ia/contracts/: auth-context.md  broker-adapter.md  signal-lifecycle.md
specs/002-team-01-dashboard-brokers/: plan.md  spec.md  tasks.md
specs/002-team-01-dashboard-brokers/checklists/: requirements.md
specs/003-fundamental-opciones-ia/: tasks.md
specs/003-team-02-core-indicadores/: plan.md  spec.md  tasks.md
specs/003-team-02-core-indicadores/contracts/: chat-explain.openapi.yaml  confluence.openapi.yaml
specs/005-app-shell-chat/: tasks.md
specs/011-team-05-full-migration/: tasks.md
(+118 files in other folders)
